Added files via upload

--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<ul>
 										<li><a class="scroll" href="#home">Home</a></li>
 										<li><a class="scroll" href="#about">About</a></li>
-										<li><a class="scroll" href="#services">Skill</a></li>
+										<li><a class="scroll" href="#skills">Skill</a></li>
 										<li><a class="scroll" href="#blog">Project</a></li>
 										<li><a class="scroll" href="#contact">Contact</a></li>
 										<div class="clear"> </div>
@@ -140,15 +140,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!--/pop-up-box-->
 		<!-- /about -->
 
-		<!-- services -->
-		<div id="services" class="services">
+		<!-- skills -->
+		<div id="skills" class="skills">
 			<!-- head-section -->
 				<div class="head-section service-head text-center">
 					<h2>My Skill</h2>
 					<span></span>
 				</div>
 				<!-- head-section -->
-				<!-- services-grids -->
+				<!-- skills-grids -->
 				<div class="service-grids text-center">
 					<div class="container">
 						<div class="col-md-4">
@@ -196,9 +196,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="clearfix"> </div>
 					</div>
 				</div>
-				<!-- services-grids -->
+				<!-- skills-grids -->
 		</div>
-		<!-- services -->
+		<!-- skills -->
 		
 
 
@@ -222,7 +222,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="blog-artical-info">
 							<h3><a href="{{ url_for('index') }}">Datamining</a></h3>
 							<span><a href="#">13 comments</a></span>
-							<p>Datamining</p>
+							<p>
+								<li>Developed strategies for data mining large datasets from the web (Machine Learning)</li>
+								<li>Processed data spatially to derive new knowledge about the city (Python)</li>
+								<li>Visualized data in a website map (OrientDB, HTML, JavaScript, CSS, Flask)</li>
+							</p>
 							<a class="more-btn" href="{{ url_for('index') }}">See More</a>
 							<div class="clearfix"> </div>
 						</div>
