Added files via upload

--- a/main.html
+++ b/main.html
@@ -222,10 +222,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="blog-artical-info">
 							<h3><a href="{{ url_for('index') }}">Datamining</a></h3>
 							<span><a href="#">13 comments</a></span>
-							<p>
-								<li>Developed strategies for data mining large datasets from the web (Machine Learning)</li>
-								<li>Processed data spatially to derive new knowledge about the city (Python)</li>
-								<li>Visualized data in a website map (OrientDB, HTML, JavaScript, CSS, Flask)</li>
+							<p>Developed strategies for data mining large datasets from the web (Machine Learning)
+							   Processed data spatially to derive new knowledge about the city (Python)
+							   Visualized data in a website map (OrientDB, HTML, JavaScript, CSS, Flask)
 							</p>
 							<a class="more-btn" href="{{ url_for('index') }}">See More</a>
 							<div class="clearfix"> </div>
