Added files via upload

--- a/main.html
+++ b/main.html
@@ -221,10 +221,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="{{ url_for('index') }}">Datamining</a></h3>
-							<span><a href="#">13 comments</a></span>
-							<p>Developed strategies for data mining large datasets from the web (Machine Learning)
-							   Processed data spatially to derive new knowledge about the city (Python)
-							   Visualized data in a website map (OrientDB, HTML, JavaScript, CSS, Flask)
+
+							<p>
+								<li>Developed strategies for data mining large datasets from the web (Machine Learning)</li>
+								<li>Processed data spatially to derive new knowledge about the city (Python)</li>
+								<li>Visualized data in a website map (OrientDB, HTML, JavaScript, CSS, Flask)</li>
 							</p>
 							<a class="more-btn" href="{{ url_for('index') }}">See More</a>
 							<div class="clearfix"> </div>
@@ -236,8 +237,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 2</a></h3>
-							<span><a href="#">13 comments</a></span>
-							<p>P 2</p>
+
+							<p>
+							<li>P 2</li>
+							<li>s</li>
+							<li>s</li>
+							</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
 						</div>
@@ -248,8 +253,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 3</a></h3>
-							<span><a href="#">13 comments</a></span>
-							<p>Project 3</p>
+
+							<p>Project 3
+							<li>P 3</li>
+							<li>s</li>
+							<li>s</li>
+							</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
 						</div>
@@ -260,31 +269,31 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 4</a></h3>
-							<span><a href="#">13 comments</a></span>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.dolor in hendrerit in vulputate velit.</p>
+
+							<p>.</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
 						</div>
 					</div>
-					<div class="blog-artical">
+					<div class="blog-artical move-top1">
 						<div class="blog-artical-pic">
 							<a href="#"><img src="{{ url_for('static', filename='blog-post5.jpg') }}" title="name" /></a>
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 5</a></h3>
-							<span><a href="#">13 comments</a></span>
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore.</p>
+
+							<p>.</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
 						</div>
 					</div>
-					<div class="blog-artical">
+					<div class="blog-artical top-mid">
 						<div class="blog-artical-pic">
 							<a href="#"><img src="{{ url_for('static', filename='blog-post.jpg') }}" title="name" /></a>
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 6</a></h3>
-							<span><a href="#">13 comments</a></span>
+
 							<p>p6</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
