Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>DMC Web Stack</title>
+	<title>Project: Datamining</title>
 	<script type="text/javascript" src="{{ url_for('static', filename='d3.js') }}"></script>
 	<script type="text/javascript" src="{{ url_for('static', filename='leaflet.js') }}"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='leaflet.css') }}" />
