Added files via upload

--- a/main.html
+++ b/main.html
@@ -102,9 +102,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="about-grids">
 					<div class="col-md-6 about-left-grid">
 						<h3>Linmao Cong</h3>
-						<span>Full Stack Developer | Software Engineer</span>
-						<p>Summary about me</p>
-						<p>a line under summary</p>
+						<span>I'm seeking full-time Full Stack Developer position.</span>
+						
+						<p>Full stack developer:</p>
+						<p>With a passion to make pixels and lines of code into clean, responsive, and user friendly websites.</p> 
+						<p>Capable of involving full software development cycle with comprehensive knowledge of software design and implementations.</p>
+						<p>Possessing strong programming concepts and problem solving skills in a number of programming languages, tools and technologies.</p>
+						<p>Good interpersonal and communication skills, commitment, result-oriented, eager to learn new technologies and undertake challenging risks.</p>
+						<p>I love teaming up with innovative, mission-driven individuals who want to make an impact in the world. I am always searching for new ways to increase efficiency and effectiveness.</p>
 					</div>
 					<div class="col-md-6 about-right-grid">
 						<a class="popup-with-zoom-anim" href="#small-dialog"><img src="{{ url_for('static', filename='video.jpg') }}" title="name" /></a>
@@ -204,7 +209,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
 
 
-		<!-- blog -->
+		<!-- projs -->
 		<div id="blog" class="blog">
 			<div class="container">
 				<!-- head-section -->
