Added files via upload

--- a/main.html
+++ b/main.html
@@ -280,7 +280,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"> </div>
 						</div>
 					</div>
-					<div class="blog-artical move-top1">
+					<div class="blog-artical">
 						<div class="blog-artical-pic">
 							<a href="#"><img src="{{ url_for('static', filename='blog-post5.jpg') }}" title="name" /></a>
 						</div>
@@ -292,7 +292,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"> </div>
 						</div>
 					</div>
-					<div class="blog-artical top-mid">
+					<div class="blog-artical">
 						<div class="blog-artical-pic">
 							<a href="#"><img src="{{ url_for('static', filename='blog-post.jpg') }}" title="name" /></a>
 						</div>
