Added files via upload

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
 	<div class="menu">
 		<p><h4>Datamining</h4></p>
+		<p>Hi {{username}}!</p>
 		<form>
 			<!-- IMPLEMENT NEW USER INTERFACE ELEMENTS HERE -->
 			<p><input id="heatmap" type="checkbox">Heat Map</p>
