--- a/main.html
+++ b/main.html
@@ -226,7 +226,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="{{ url_for('index') }}">Datamining</a></h3>
-
+							<span>{{clicktimes1}} views</span>
 							<p>
 								<li>Developed strategies for data mining large datasets from the web (Machine Learning)</li>
 								<li>Processed data spatially to derive new knowledge about the city (Python)</li>
@@ -241,12 +241,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<a href="#"><img src="{{ url_for('static', filename='blog-post1.jpg') }}" title="name" /></a>
 						</div>
 						<div class="blog-artical-info">
-							<h3><a href="#">Project 2</a></h3>
-
+							<h3><a href="#">Catalog App</a></h3>
+							<span>{{clicktimes2}} views</span>
 							<p>
-							<li>P 2</li>
-							<li>s</li>
-							<li>s</li>
+							<li>Installed and configured the database server and actually hosted a web application (Flask, SQLAlchemy, Bootstrap, JSON, AJAX, OAuth)</li>
 							</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
@@ -258,7 +256,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 3</a></h3>
-
+							<span>{{clicktimes3}} views</span>
 							<p>Project 3
 							<li>P 3</li>
 							<li>s</li>
@@ -274,7 +272,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 4</a></h3>
-
+							<span>{{clicktimes4}} views</span>
 							<p>.</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
@@ -286,7 +284,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 5</a></h3>
-
+							<span>{{clicktimes5}} views</span>
 							<p>.</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
@@ -298,7 +296,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Project 6</a></h3>
-
+							<span>{{clicktimes6}} views</span>
 							<p>p6</p>
 							<a class="more-btn" href="#">See More</a>
 							<div class="clearfix"> </div>
